--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "routes": [
+    { "src": "/css/(.*)", "dest": "/css/$1" },
     { "src": "/js/(.*)", "dest": "/js/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
