--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-  "routes": [
+  "headers": [
     {
-      "src": "/(.*\\.(css|js|ico|png|jpg|svg))$",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/css/(.*)",
+      "headers": [{ "key": "Content-Type", "value": "text/css" }]
     }
+  ],
+  "routes": [
+    { "src": "/css/(.*)", "dest": "/css/$1" },
+    { "src": "/js/(.*)", "dest": "/js/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
