--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
+  "headers": [
+    {
+      "source": "/css/(.*)",
+      "headers": [{ "key": "Content-Type", "value": "text/css" }]
+    }
+  ],
   "routes": [
-
     { "src": "/css/(.*)", "dest": "/css/$1" },
     { "src": "/js/(.*)", "dest": "/js/$1" },
-
-    {
-      "src": "/(.*\\.(css|js|ico|png|jpg|svg))$",
-      "dest": "/$1"
-    },
-
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
