--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "source": "/(.*\\.css)",
       "headers": [{ "key": "Content-Type", "value": "text/css" }]
     }
+  ],
+  "routes": [
+    { "src": "/css/(.*)", "dest": "/css/$1" },
+    { "src": "/js/(.*)", "dest": "/js/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
