--- a/vercel.json
+++ b/vercel.json
@@ -5,13 +5,7 @@
       "headers": [{ "key": "Content-Type", "value": "text/css" }]
     }
   ],
-  "routes": [
-    { "src": "/css/(.*)", "dest": "/css/$1" },
-    { "src": "/js/(.*)", "dest": "/js/$1" },
-    {
-      "src": "/(.*\\.(css|js|ico|png|jpg|svg))$",
-      "dest": "/$1"
-    },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
